RESOLVED FIXED 83907
webkit fails IETC grid-column-002
https://bugs.webkit.org/show_bug.cgi?id=83907
Summary webkit fails IETC grid-column-002
Dave Tharp
Reported 2012-04-13 10:51:46 PDT
Red is visible on the page.
Attachments
Proposed trivial change: Don't accept '0' as a valid grid position and fix the test to enable CSS Grid Layout under testRunner. (13.78 KB, patch)
2013-04-01 17:17 PDT, Julien Chaffraix
no flags
Dave Tharp
Comment 1 2012-04-13 11:04:23 PDT
Test has been imported in LayoutTests/ietestcenter/css3/grid
Julien Chaffraix
Comment 2 2013-04-01 16:05:21 PDT
This test is invalid per the latest specification as a negative <integer> for grid-{column|row} has a definite meaning.
Julien Chaffraix
Comment 3 2013-04-01 16:21:06 PDT
Sorry, this was posted to the wrong bug. '0' is still invalid for grid-{column|row} and is a bug in our implementation.
Julien Chaffraix
Comment 4 2013-04-01 17:17:45 PDT
Created attachment 196044 [details] Proposed trivial change: Don't accept '0' as a valid grid position and fix the test to enable CSS Grid Layout under testRunner.
WebKit Review Bot
Comment 5 2013-04-02 07:39:48 PDT
Comment on attachment 196044 [details] Proposed trivial change: Don't accept '0' as a valid grid position and fix the test to enable CSS Grid Layout under testRunner. Clearing flags on attachment: 196044 Committed r147430: <http://trac.webkit.org/changeset/147430>
WebKit Review Bot
Comment 6 2013-04-02 07:39:53 PDT
All reviewed patches have been landed. Closing bug.
Julien Chaffraix
Comment 7 2013-04-02 10:24:20 PDT
Removed the test from mac too in http://trac.webkit.org/changeset/147445. This was forgotten in the original change and the Mac buildbots were listing the test as passing.
Note You need to log in before you can comment on or make changes to this bug.