webkit fails IETC grid-column-002 https://bugs.webkit.org/show_bug.cgi?id=83907

Reviewed by Ojan Vafai.

Source/WebCore:

Tests: fast/css-grid-layout/grid-item-column-row-get-set.html
       ietestcenter/css3/grid/grid-column-002.htm

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
Don't accept 0 as a valid <integer> position.

LayoutTests:

* fast/css-grid-layout/grid-item-column-row-get-set-expected.txt:
* fast/css-grid-layout/grid-item-column-row-get-set.html:
Extended our testing to cover setting grid-{start|end|before|after} to 0.

* ietestcenter/css3/grid/grid-column-002.htm:
* ietestcenter/css3/grid/testRunnerEnableGrid.js: Added.
Needed to dynamically enable CSS Grid Layout for the test to pass. The file
hosts the boiler-plate code which will be common to all tests.

* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/qt-mac/TestExpectations:
* platform/qt/TestExpectations:
Removed grid-column-002.htm from the test expectations.


Canonical link: https://commits.webkit.org/132112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147430 268f45cc-cd09-0410-ab3c-d52691b4dbfc